2009-08-31  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/Plot.java
    (DEFAULT_OUTLINE_STROKE): Changed default cap and join.

2009-07-13  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/Plot.java
    (drawBackgroundImage): Clip to data area.

2009-07-08  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/axis/NumberAxis.java
    (createStandardTickUnits): Added additional units for small tick sizes.

2009-07-07  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/StackedBarRenderer3D.java
    (ignoreZeroValues): New flag,
    (getIgnoreZeroValues): New method,
    (setIgnoreZeroValues): Likewise,
    (createStackedValueList): Removed static modifier and check value of new
    flag,
    (equals): Check value of new flag,
    (hashCode): New method override.

2009-07-06  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/CategoryPlot.java
    (clone): Update plot references in cloned renderers,
    * source/org/jfree/chart/plot/XYPlot.java
    (clone): Likewise.

2009-07-06  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/ChartPanel.java
    (paintComponent): Clear off screen buffer to fully transparent.

2009-06-29  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/JFreeChart.java
    (draw): Check the visibility of the main chart title before drawing it.

2009-06-29  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/axis/CategoryAxis.java
    (draw):  Add axis entity before drawing labels.

2009-06-26  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/TimeSeriesCollection.java
    (clone): New method override.

2009-06-26  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/ohlc/OHLCSeriesCollection.java